# rare

./: Cargo.toml  Readme.md
benches/: bench.rs
src/: _test_util.rs  arr.rs  dense_poly.rs  dense_rat.rs  lib.rs  matrix.rs  poly.rs  rand.rs  rat.rs  rec_linear.rs  rec_linear_multivar.rs  rec_newton.rs  rec_rat.rs  rec_rat_fn.rs  rec_rat_fn_linear.rs  rec_rat_linear.rs  rec_rat_mod.rs  rec_thiele.rs  sparse_poly.rs  traits.rs  util.rs
src/algebra/: mod.rs
src/algebra/poly/: dense.rs  flat.rs  mod.rs
src/algebra/rat/: mod.rs
src/rec/: crt.rs  mod.rs  primes.rs  probe.rs
src/rec/poly/: mod.rs
src/rec/poly/finite/: mod.rs  newton.rs
src/rec/rat/: cuyt_lee.rs  ffrat.rs  mod.rs  sampler.rs  thiele.rs  thiele_linear.rs  thiele_multivar.rs  thiele_univar.rs  util.rs
src/rec/rat/finite/: cuyt_lee.rs  degree_rec.rs  linear.rs  mod.rs  thiele.rs
