[package]
name = "rare"
version = "0.1.0"
edition = "2021"
description = "Rational function reconstruction"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
license = "GPL-3.0-or-later"
readme = "Readme.md"
keywords = []
categories = ["Mathematics"]

[dependencies]
ahash = "0.8"
array-init = "2.1"
galois-fields = { git = "ssh://git@gitlab.desy.de/andreas.martin.maier/galois-fields.git", features = ["num-traits", "rand"] }
itertools = "0.10"
log = "0.4"
num-traits = "0.2"
paste = "1.0"
rand = "0.8"

[dev-dependencies]
criterion = "0.4"
env_logger = "0.10"
rand_xoshiro = "0.6"

[[bench]]
name = "bench"
harness = false
