[package]
name = "rare"
version = "0.4.2"
edition = "2021"
description = "Rational function reconstruction"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
license = "GPL-3.0-or-later"
readme = "Readme.md"
keywords = []
categories = ["Mathematics"]

[dependencies]
ahash = "0.8"
array-init = "2.1"
ffnt = { version = "0.6", features = ["num-traits", "rand"] }
itertools = "0.12"
lazy_static = "1.4"
log = "0.4"
num-integer = "0.1"
num-traits = "0.2"
paste = "1.0"
rand = "0.8"
seq-macro = "0.3"
thiserror = "1.0"

[dependencies.rug]
version = "1.19"
default-features = false
features = ["integer", "rational", "float", "num-traits"]

[dev-dependencies]
criterion = "0.5"
env_logger = "0.11"
rand_xoshiro = "0.6"

[[bench]]
name = "bench"
harness = false
